--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,47 @@
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Production
+dist/
+build/
+
+# Environment
+.env
+.env.local
+.env.*.local
+
 # Logs
-logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
-# Environment variables
-.env
-.env*.local
-
-# Production build folder
-dist
-dist-ssr
-
-# Node dependencies
-node_modules/
-
-# IDE and editor files
+# Editor
 .vscode/
 .idea/
+*.swp
+*.swo
+.DS_Store
+
+# Supabase
+supabase/.temp/
+supabase/.env
+
+
+# Node dependencies
+frontend/node_modules/
+
+# Production build folder
+frontend/dist/
+frontend/dist-ssr/
+
+# Environment variables
+frontend/.env
+frontend/.env*.local
+
+# Logs and other junk
+logs/
+*.log
+.vscode/
+
+Documentation.txt
